--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,6 +30,18 @@
                     {% endfor %}
                 </ul>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link btn btn-dark dropdown-toggle" id="projects-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Projects
+                </a>
+                <ul class="dropdown-menu bg-dark" aria-labelledby="projects-dropdown">
+                    {% for project in site.data.gem_nav %}
+                        <li class="dropdown-header">{{ project.name }} -- {{ project.lang }} </li>
+                        <a class="dropdown-item" href="/gems{{project.anchor}}">{{ project.anchor }}</a>
+
+                    {% endfor %}
+                </ul>
+            </li>
         </ul>
     </div>
 </nav>
