do some big changes and rearrange how pages are generated with their data

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 
         <div class="d-flex flex-row-reverse mx-auto text-light">
             <span class="">
-                <p class="">Copyright &copy; 12018<a href="https://youtu.be/czgOWmtGVGs"><i class="fas fa-question-circle px-1"></i></a>&ndash; ElectroCode / Ken Spencer</p>
+                <p class="">Copyright &copy; 12018<a href="https://youtu.be/czgOWmtGVGs"><i class="fas fa-question-circle fa-fw fa-1x px-1"></i></a>&ndash; ElectroCode / Ken Spencer</p>
             </span>
         </div>
     </div>
