--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,1 +1,8 @@
-<div></div>
+<div>
+    <div id="vultr-affiliate">
+        <h4>Vultr Affiliate</h4>
+        <div class="text-center">
+            <a href="http://www.vultr.com/"><img src="http://www.vultr.com/dist/img/brand/banner_3.png" class="img-fluid" alt="Vultr Affiliate"></a>
+        </div>
+    </div>
+</div>
