--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,10 @@
 {% include head.html %}
     <div class="row col-12">
         <div class="col-md-8">
-            <div id="content" class="p-4">
+            <div id="breadcrumbs">
+                {% include head_breadcrumb.html %}
+            </div>
+            <div id="content" class="">
                 {{content}}
             </div>
         </div>
