work on /projects/index.html

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
             <div id="breadcrumbs">
                 {% include head_breadcrumb.html %}
             </div>
-            <div id="content" class="">
+            <div id="content" class="p-2">
                 {{content}}
             </div>
         </div>
