--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,7 @@
 $dark: #1d1d1d;
-$dark-grey: #17191f;
+$dark-grey: #000000;
 $light-grey: #313543;
-$dark-light-grey: #1f232b;
+$dark-light-grey: #383838;
 $light: #ffffff;
 
 $link: #2b90d9;
