update some stuff and make changes

--- a/_includes/nav-breadcrumbs.html
+++ b/_includes/nav-breadcrumbs.html
@@ -1,4 +1,4 @@
-<nav class="breadcrumbs hidden-sm-down bg-dark">
+<nav class="breadcrumbs hidden-sm-down bg-breadcrumb">
    <ol class="breadcrumb list-unstyled bg-dark" vocab="http://schema.org/" typeof="BreadcrumbList">
 
       {% for crumb in breadcrumbs %}
