--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,10 @@
 <div>
+    <div id="twitter-ecodein-timeline" class="text-center">
+            <a class="twitter-timeline" data-lang="en" data-width="300" data-height="400" data-dnt="true" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/ecodein?ref_src=twsrc%5Etfw">Tweets by ecodein</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <hr class="sidebar-divider" />
     <div id="vultr-affiliate">
-        <h4>Vultr Affiliate</h4>
+        <h4 class="sr-only">Vultr Affiliate</h4>
         <div class="text-center">
             <a href="http://www.vultr.com/"><img src="http://www.vultr.com/dist/img/brand/banner_3.png" class="img-fluid" alt="Vultr Affiliate"></a>
         </div>
